# lang-chain-01

./: .env  .gitignore  README.md  data_ingest.py  hugging_face.py  main.py  pyproject.toml  text_splitter.py
agent-01/: main.py  pyproject.toml
embedding/: ollama_embeddings.py
open_ai/: open_ai_01.py
vector_search_facet/: pinecone_helper.py
